Header alignment issue fixes for mobile.

--- a/src/app/components/coaching/p2p.coaching.component.scss
+++ b/src/app/components/coaching/p2p.coaching.component.scss
@@ -2,3 +2,15 @@
     width: 50px;
     height: 70px;
 }
+
+@media (max-width: 767px) {
+    .main {
+        margin-top: 50px;
+    }
+}
+
+@media (min-width: 768px) {
+    .main {
+        margin-top: 100px;
+    }   
+}
