--- a/src/app/components/home/p2p.home.component.scss
+++ b/src/app/components/home/p2p.home.component.scss
@@ -1,3 +1,12 @@
-// .col-md-6 {
-//     padding-top: 20px;
-// }
+
+@media (max-width: 767px) {
+    .main {
+        margin-top: 100px;
+    }
+}
+
+@media (min-width: 768px) {
+    .main {
+        margin-top: 0px;
+    }   
+}
