--- a/src/assets/sass/paper-kit/_footers.scss
+++ b/src/assets/sass/paper-kit/_footers.scss
@@ -47,7 +47,7 @@
     // background-color: $white-color;
     background: rgb(255,255,255);
     background: linear-gradient(0deg, rgba(235,191,148,1) 0%, rgba(255,255,255,1) 100%); 
-    border-top: 1px solid #FFFFFF;
+    // border-top: 1px solid #FFFFFF;
     box-shadow: none;
     line-height: $line-height;
 
